fix(PartView): fix layer names being 1px too short and getting misaligned with their corresponding layer

--- a/apps/app/src/react/styles/part.scss
+++ b/apps/app/src/react/styles/part.scss
@@ -195,6 +195,7 @@
 			white-space: nowrap;
 			min-width: 0;
 			flex-shrink: 1;
+			box-sizing: content-box;
 
 			> span {
 				min-width: 0;
